Allow access to ui discardable memory manager from pdf compositor

When Mus is enabled, discardable memory manager server runs in ui
service. This CL adds support to access discardable memory manager server
in ui service from pdf compositor service.

BUG=834889

Change-Id: Ic667b04d3b9f588ace4accb9e6ecf2ad91a6819d
Reviewed-on: https://chromium-review.googlesource.com/1022810
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552745}
Former-commit-id: 0a427b080429e7dcd65ffdf9fca6b5df4ae3e301